--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="./style.css">
-        <title>мой сайт</title>
+        <title>sait-potfolio</title>
     </head>
 
     <body>
@@ -126,7 +126,7 @@
             <div class="uni__body">
                 <div class="uni__content">
                     <a href="#stud" class="uni__close">Х</a>
-                    <div class="uni__titel">About universisty</div>
+                    <div class="uni__titel">About university</div>
                     <div class="uni__text">
                         I am moving to the 2nd year of the Moscow Technical University of Communications and Informatics.<br>
                         During the year of study here, I got acquainted with git, html, css, roboflow, data detection <br>
@@ -141,9 +141,9 @@
                     <a href="#stud" class="pro__close">Х</a>
                     <div class="pro__titel">About projects</div>
                     <div class="pro__text">
-                      <p><img src="./img/11.png" alt="">TRANSLATE WEDSITE</p>
-                       <p><img src="./img/12.png" alt="">TELEGRAM-BOT</p>
-                       <p><img src="./img/13.png" alt="">DETECTIVE</p>
+                        <img class="p" src="./img/11.png" alt=""><a class="v" href="https://github.com/AnnOselkova/web-translator" > TRANSLATE WEDSITE</a>
+                        <img class="p" src="./img/12.png" alt=""><a class="v" href="https://github.com/AnnOselkova/simple-bot" >TELEGRAM-BOT</a>
+                        <img class="p" src="./img/13.png" alt=""><a class="v" href="https://github.com/chugunova24/SIZ_website_darina">DETECTIVE </a>
                     </div>                  
                 </div>
             </div>
